--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     
                 </div>
                     <div class="col-lg-5 px-8 pl-lg-0 pb-5 pb-lg-4 about-img">
-                        <img class="img-fluid w-10 rounded-circle shadow-sm" src="img/yo.jpg" alt="">
+                        <img class="img-fluid w-10 rounded-circle shadow-sm" src="Img/yo.jpg" alt="">
                     </div>
             </div>
         </div>
